feat: create webapi .net 6

--- a/tests/ToDoList.Tests.csproj
+++ b/tests/ToDoList.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
@@ -21,7 +21,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
-    <ProjectReference Include="..\src\ToDoList.csproj" />
+    <ProjectReference Include="..\src\ToDoList\ToDoList.csproj" />
   </ItemGroup>
 
 </Project>
