Feat: add references and create infrastructure projects

--- a/tests/ToDoList.Domain.Tests/ToDoList.Domain.Tests.csproj
+++ b/tests/ToDoList.Domain.Tests/ToDoList.Domain.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ToDoList.Domain\ToDoList.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
