--- a/src/ToDoList.WebApi/ToDoList.WebApi.csproj
+++ b/src/ToDoList.WebApi/ToDoList.WebApi.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoList.Infra\ToDoList.Infra.IoC\ToDoList.Infra.IoC.csproj" />
+  </ItemGroup>
+
 </Project>
