--- a/tests/ToDoList.Application.Tests/ToDoList.Application.Tests.csproj
+++ b/tests/ToDoList.Application.Tests/ToDoList.Application.Tests.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\ToDoList.Application\ToDoList.Application.csproj" />
+  </ItemGroup>
+
 </Project>
