--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,26 @@ services:
       context: ./
       dockerfile: Dockerfile
     ports:
-      - "5000:80"
+      - "5001:80"
+    depends_on:
+      - db
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
     networks:
       - app-network
+
+  db:
+    container_name: 'db'
+    image: "mcr.microsoft.com/mssql/server:2019-latest"
+    environment:
+      SA_PASSWORD: "Bilabilu.12345"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1400:1433"
+    networks:
+      - app-network
+    volumes:
+      - db:/var/lib/mysql
 
   frontend:
     build:
@@ -21,3 +38,6 @@ services:
 networks:
   app-network:
     driver: bridge
+
+volumes: 
+  db:
