--- a/client/to-do-list-web/Dockerfile
+++ b/client/to-do-list-web/Dockerfile
@@ -1,12 +1,11 @@
 # Etapa de compilação
 FROM node:latest as build-step
 WORKDIR /app
-COPY package.json ./
+COPY package.json /app
 RUN npm install
 COPY . .
 RUN npm run build
 
 # Etapa de execução
-FROM nginx:alpine
-COPY --from=build-step /app/dist/to-do-list-web /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
+FROM nginx:latest 
+COPY --from=build-step /app/dist/to-do-list-web/browser /usr/share/nginx/html
