--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 services:
-  webapi:
+  back:
     build:
       context: ./
       dockerfile: Dockerfile
     ports:
-      - "5001:80"
+      - "5000:5000"
     depends_on:
       - db
     environment:
@@ -26,12 +26,23 @@ services:
     volumes:
       - db:/var/lib/mysql
 
-  frontend:
+  nginx:
+      build:
+          context: ./nginx/
+      ports:
+          - "80:80"
+      networks: 
+      - app-network
+      depends_on:
+          - "back"
+
+
+  front:
     build:
       context: ./client/to-do-list-web/
       dockerfile: Dockerfile
     ports:
-      - "4200:80"
+      - "4200:4200"
     networks:
       - app-network
 
