--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
       context: ./
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - 5000:5000
     depends_on:
       - db
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-    networks:
+    networks: 
       - app-network
 
   db:
@@ -27,14 +27,18 @@ services:
       - db:/var/lib/mysql
 
   nginx:
-      build:
-          context: ./nginx/
-      ports:
-          - "80:80"
-      networks: 
+    container_name: nginx
+    image: nginx
+    links: 
+      - back
+    ports:
+      - "80:80"
+    networks: 
       - app-network
-      depends_on:
-          - "back"
+    depends_on:
+      - back
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
 
 
   front:
