--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,4 @@
+worker_processes 1; 
 
 events {
     worker_connections 1024;
@@ -11,8 +12,8 @@ http {
             proxy_pass http://front/;
         }
 
-        location /back/ {
-            proxy_pass http://back:5000;
+        location /api/ {
+            proxy_pass http://back:5000/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
